--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         <div class="container">
             <div class="about__content">
                 <div class="about__item">
+                    <div class="img">
+                        <img src="/images/ring.png" alt="">
+                    </div>
                     <h2>About Our Company</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
                     <button>read more</button>
@@ -145,6 +148,57 @@
             </div>
         </div>
       </div>
+
+      <div class="blog">
+        <div class="container">
+            <div class="title">
+                <div class="img">
+                    <img src="/images/ring.png" alt="ring">
+
+                </div>
+                <h2>FROM THE BLOG</h2>
+            </div>
+
+            <div class="blog__content">
+                <div class="blog__item">
+                    <div class="img">
+                        <img src="/images/blog_img1.jpg" alt="banner">
+                        <div class="date">
+                            <span>06</span>
+                            <span>mart</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__item">
+                    <h4>Post by : Marriage</h4>
+                    <h2>Tempor incididunt ut labore et dolore</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    <span>like </span>
+                    <span>comment</span>
+                </div>
+            </div>
+
+                    <div class="blog__content">
+                <div class="blog__item">
+                    <div class="img">
+                        <img src="/images/blog_img2.jpg" alt="banner">
+                        <div class="date">
+                            <span>26</span>
+                            <span>june</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__item">
+                    <h4>Post by : Marriage</h4>
+                    <h2>Tempor incididunt ut labore et dolore</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    <span>like </span>
+                    <span>comment</span>
+                </div>
+            </div>
+        </div>
+      </div>
+
 
 </body>
 </html>
