--- a/index.html
+++ b/index.html
@@ -198,7 +198,61 @@
             </div>
         </div>
       </div>
+      <div class="grooms">
+        <div class="container">
+            <div class="title">
+                <div class="img">
+                    <img src="/images/ring.png" alt="ring">
 
+                </div>
+                <h2>What Is Says Our GROOMS</h2>
+            </div>
+
+            <div class="grooms__content">
+                <div class="grooms__item">
+                    <div class="img">
+                        <img src="/images/saya.png" alt="saya">
+                    </div>
+                    <h2>Jacksmith sand</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form</p>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="visit">
+        <div class="container">
+            <div class="visit__item">
+                <div class="visit__logo">
+                    <img src="/images/logo_footer.png" alt="">
+                </div>
+                <span> <i class="fa-solid fa-location-dot"></i> address</span>
+                <span><i class="fa-solid fa-phone"></i> +998-91-660-86-88</span>
+                <span> <i class="fa-solid fa-envelope"></i> demo@gmail.com</span>
+            </div>
+        </div>
+      </div>
+
+      <div class="contact">
+        <div class="container">
+            <div class="contact__content">
+                <div class="contact__item">
+                    <form>
+                        <input type="text" placeholder="name">
+                        <input type="text" placeholder="email">
+                        <input type="text" placeholder="number">
+                        <textarea placeholder="massage"></textarea>
+                        <button type="submit">send</button>
+                    </form>
+                </div>
+
+                <div class="contact__item">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d95853.20200343209!2d69.3436416!3d41.3433856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1689578892889!5m2!1sru!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
