--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rings</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
@@ -22,6 +23,7 @@
                 <a href="#">servise</a>
                 <a href="#">blog</a>
                 <a href="#">contact us</a>
+                
               </div>
             </div>
           </div>
@@ -232,6 +234,7 @@
                 <span> <i class="fa-solid fa-envelope"></i> demo@gmail.com</span>
             </div>
         </div>
+        <div class="black"> </div>
       </div>
 
       <div class="contact">
@@ -239,11 +242,20 @@
             <div class="contact__content">
                 <div class="contact__item">
                     <form>
+                        <h2>contact</h2>
                         <input type="text" placeholder="name">
                         <input type="text" placeholder="email">
                         <input type="text" placeholder="number">
                         <textarea placeholder="massage"></textarea>
-                        <button type="submit">send</button>
+                       <div class="social">
+                         <button type="submit">send</button>
+                         <div class="media">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-telegram"></i>
+                         </div>
+                       </div>
                     </form>
                 </div>
 
@@ -252,6 +264,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="copyRight">
+        <p>© 2019 All Rights Reserved. Free Html Templates</p>
     </div>
 
 </body>
